--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -555,7 +555,11 @@
 
                             const whatsappMessage =
                                 `Hola, me llamo ${firstName} ${lastName}. Estoy interesado en el curso ${courseTitle}. ${notes}`;
-
+                            gtag('event', 'whatsapp_send_detail', {
+                                        categoria: 'lead',
+                                        accion: 'enviar',
+                                        etiqueta: 'form_contacto_detail'
+                                    });
                             window.open(
                                 `https://wa.me/51991337159?text=${encodeURIComponent(whatsappMessage)}`, '_blank'
                             );
