--- a/templates/index.html
+++ b/templates/index.html
@@ -108,8 +108,8 @@
                                                 data-bs-toggle="modal"
                                                 data-bs-target="#exampleModal"
                                                 data-bs-course="{{ course.title }}"
-                                                title="Probar una clase de {{ course.title }}">
-                                            Probar Clase
+                                                title="Reservar Mi Clase de {{ course.title }}">
+                                            Reservar Mi Clase
                                         </button>
                                     </div>
                                 </div>
