--- a/templates/instructors/instructors_detail.html
+++ b/templates/instructors/instructors_detail.html
@@ -55,9 +55,9 @@
                                                     data-bs-toggle="modal"
                                                     data-bs-target="#exampleModal"
                                                     data-bs-course="{{ course.title }}"
-                                                    title="Probar una clase de {{ course.title }}"
+                                                    title="Reservar Mi Clase de {{ course.title }}"
                                                     style="border-radius: 0 30px 30px 0;">
-                                                Probar Clase
+                                                Reservar Mi Clase
                                             </button>
 
                                         </div>
