--- a/templates/_base.html
+++ b/templates/_base.html
@@ -93,9 +93,9 @@
   
       <!-- Navbar Start -->
       <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
-          <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5" title="Cuban Groove – Academia de Salsa en Lima">
+          <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5" title="Cuban Groove – Clases de Salsa en Lima">
             <p class="m-0 text-primary">
-                <img src="{% static 'img/logos/logo_desk.webp' %}" style="width: 200px; height: auto;" alt="Cuban Groove – Academia de Salsa en Lima" title="Cuban Groove – Clases de Salsa y Baile Cubano">
+                <img src="{% static 'img/logos/logo_desk.webp' %}" style="width: 200px; height: auto;" alt="Cuban Groove – Clases de Salsa en Lima" title="Cuban Groove – Clases de Salsa y Baile Cubano">
             </p>
           </a>
           <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -103,7 +103,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
               <div class="navbar-nav ms-auto p-4 p-lg-0">
-                  <a href="{% url 'home' %}" class="nav-item nav-link {% if request.path == '/' %}active{% endif %}" title="Cuban Groove – Academia de Salsa en Lima">Inicio</a>
+                  <a href="{% url 'home' %}" class="nav-item nav-link {% if request.path == '/' %}active{% endif %}" title="Cuban Groove – Clases de Salsa en Lima">Inicio</a>
 
                   <div class="nav-item dropdown">
                       <a href="{% url 'courses_group' %}" class="nav-link dropdown-toggle {% if 'clases' in request.path %}active{% endif %}" data-bs-toggle="dropdown" title="Explora nuestras clases de baile en Lima">Clases de Baile</a>
