update index follow

--- a/templates/courses/course_detail.html
+++ b/templates/courses/course_detail.html
@@ -203,7 +203,7 @@
                         <div class="row g-3">
                             <div class="col-12">
                                 <div class="form-floating">
-                                    <p class="custom-h4 text-dark">Solicita más info y reserva tu clase GRATIS hoy mismo!.</p>
+                                    <p class="custom-h4 text-dark">Solicita más info y reserva tu clase hoy mismo!.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
