--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,7 +16,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="author" content="Cuban Groove">
-    <meta name="robots" content="index, follow">
+    {% block meta_robots %}
+        <meta name="robots" content="index, follow">
+    {% endblock %}
 
     {% block title %}
         <title>Academia de Baile en Lima – Clases de Salsa</title>
@@ -133,11 +135,11 @@
                   <a href="{% url 'contact' %}" class="nav-item nav-link {% if 'contact' in request.path %}active{% endif %}" title="Contáctanos para clases de salsa, horarios y precios en Cuban Groove">Contacto</a>
                   <a href="{% url 'post_list' %}" class="nav-item nav-link {% if 'blog' in request.path %}active{% endif %}" title="Lee artículos sobre baile, salsa cubana y consejos de danza en nuestro blog">Blog</a>
                   <a href="{% url 'faq' %}" class="nav-item nav-link {% if 'preguntas-frecuentes' in request.path %}active{% endif %}" title="Preguntas frecuentes sobre nuestras clases de baile, precios y niveles">
-                    Preguntas Frecuentes
+                    Preguntas
                   </a>
 
               </div>
-              <a href="" id="btn_home_menu_free_class" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"  style="background-color: #ff6a09;color: white; align-items: center;" data-bs-toggle="modal" data-bs-target="#exampleModal">Prueba GRATIS<i class="fa fa-arrow-right ms-3"></i></a>
+              <a href="" id="btn_home_menu_free_class" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block"  style="background-color: #ff6a09;color: white; align-items: center;" data-bs-toggle="modal" data-bs-target="#exampleModal">Informes<i class="fa fa-arrow-right ms-3"></i></a>
 
 
           </div>
