--- a/templates/casting/additional_info.html
+++ b/templates/casting/additional_info.html
@@ -1,5 +1,8 @@
 {% extends '_base.html' %}
 {% load static %}
+{% block meta_robots %}
+<meta name="robots" content="noindex, follow">
+{% endblock %}
 {% block title %}<title>Información Adicional | Cuban Groove</title>{% endblock title %}
 
 
