--- a/templates/casting/thank_you.html
+++ b/templates/casting/thank_you.html
@@ -1,5 +1,8 @@
 {% extends '_base.html' %}
 {% load static %}
+{% block meta_robots %}
+<meta name="robots" content="noindex, follow">
+{% endblock %}
 {% block title %}<title>Gracias | Cuban Groove</title>{% endblock title %}
 
 {% block content %}
