--- a/templates/content_site/terms_conditions.html
+++ b/templates/content_site/terms_conditions.html
@@ -1,5 +1,8 @@
 {% extends '_base.html' %}
 {% load static %}
+{% block meta_robots %}
+    <meta name="robots" content="noindex, follow">
+{% endblock %}
 {% block title %}<title>Términos y Condiciones | Cuban Groove | Clases de Baile</title>{% endblock title %}
 
 {% block content %}
